# Central-Equation-Solver

./: .gitignore  BandStructure2D.py  BandStructure3D.py  LDOSPanel.py  MainPanel.py  MapViewerPanel.py  MapsPanel.py  Panel.py  PotentialPanel.py  README.md  centralEquation1D.py  centralEquation2D.py  gui.py  potentials.py  pyproject.toml  setup.py
Central-Equation-Solver/: BandStructure2D.py  BandStructure3D.py  EPWE.py  FitPanel.py  LDOSPanel.py  MainPanel.py  MapViewerPanel.py  MapsPanel.py  Panel.py  PotentialPanel.py  SweepPanel.py  buildBSPotential.py  global_.py  gui.py  potentials.py
Central_Equation_Solver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
